<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddBeerActivity">

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_text_alcohol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:hint="@string/alcohol"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/edit_text_calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:hint="@string/calories"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/edit_text_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:autofillHints=""
            android:hint="@string/category"
            android:inputType="text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveBeer"
            android:text="@string/save" />

        <EditText
            android:id="@+id/responseMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/response_from_the_app"
            android:inputType="none"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>